ffi/derive/tests/ui_fail/generics_are_forbiden_in_ffi.stderr
error: Generics are not supported
 --> tests/ui_fail/generics_are_forbiden_in_ffi.rs:5:21
  |
5 | pub fn freestanding<T>(v: T) -> T {
  |                     ^

error: Generics on derived methods not supported
  --> tests/ui_fail/generics_are_forbiden_in_ffi.rs:12:21
   |
12 | pub struct FfiStruct<T> {
   |                     ^^^
